--- a/hackintosh.css
+++ b/hackintosh.css
@@ -140,3 +140,12 @@ img {
     color: #33cc33;
 	
 }
+
+#main_link    {
+    position: absolute;
+    top: 0px;
+    right: 40px;
+    border: 3px solid #282a36;
+	color: dimgray;
+	text-align: center;
+}
